Adding doc before making repo public

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@
 /Nabaztag.Net.Test/obj
 /Nabaztag.Simulator/bin/Debug/netcoreapp2.2
 /Nabaztag.Simulator/obj
+/Nabaztag.Net.Sample/bin/Debug/netcoreapp3.1
