Adding advance Choreography builder, few tests, an utility to dump choreography files, All services features implemented

--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,6 @@
 /Nabaztag.Simulator/bin/Debug/netcoreapp2.2
 /Nabaztag.Simulator/obj
 /Nabaztag.Net.Sample/bin/Debug/netcoreapp3.1
+/Util/.vs/Util/v16
+/Util/Dumpchor/bin/Debug/netcoreapp3.1
+/Util/Dumpchor/obj
