--- a/Nabaztag.Net.Test/Nabaztag.Net.Test.csproj
+++ b/Nabaztag.Net.Test/Nabaztag.Net.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
@@ -14,6 +14,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Nabaztag.Net\Nabaztag.Net.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="1.chor">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
