Adding headers, docs, fixing bugs

--- a/Util/Dumpchor/Dumpchor.csproj
+++ b/Util/Dumpchor/Dumpchor.csproj
@@ -24,7 +24,8 @@
     <None Update="taichi.chor">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-
+    <Compile Include="..\..\Nabaztag.Net\Models\Led.cs" />
+    <Compile Include="..\..\Nabaztag.Net\Models\Ear.cs" />
   </ItemGroup>
 
 </Project>
