--- a/Nabaztag.Server/Nabaztag.Server.csproj
+++ b/Nabaztag.Server/Nabaztag.Server.csproj
@@ -97,8 +97,10 @@
     <Compile Include="Models\EarDirection.cs" />
     <Compile Include="Models\EventNotification.cs" />
     <Compile Include="Models\Luis.cs" />
+    <Compile Include="Models\Process.cs" />
     <Compile Include="Models\RecognizeText.cs" />
     <Compile Include="Models\Settings.cs" />
+    <Compile Include="Models\StateObject.cs" />
     <Compile Include="Models\Voice.cs" />
     <Compile Include="NabServer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
